<resources>
    <string name="app_name">SuperMercado</string>
    <string name="registrarse" />
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="nombre" />
    <string name="apellido" />
    <string name="telefono" />
    <string name="correo_electronico" />
    <string name="contrase_a" />
    <string name="direccion" />
    <string name="crear_usuario">CREAR USUARIO</string>
    <string name="apellidod">Apellido</string>
    <string name="correo_electronicov">Correo Electronico</string>
    <string name="registrarses">Registrarse</string>
    <string name="supermercado_el_economico">Supermercado El Economico</string>
    <string name="inicio_naveegacion">inicio</string>
    <string name="perfil_navegacion">Perfil</string>
    <string name="carrito_navegacion">Carrito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tu_usuario_es">Tu usuario es:</string>
    <string name="b_codigo" />
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
    <string name="correo" />
    <string name="t_codigo" />
    <string name="recuperaci_n_de_usuario">Recuperación de usuario</string>
    <string name="activo">Activo</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ver_carrito" />
    <string name="historial_de_ordenes" />
    <string name="acerca_de" />
    <string name="mi_perfil" />
    <string name="nombrePerfil">Nombre</string>
    <string name="telefonoPerfil">Telefono</string>
    <string name="mi_perfil_admin">Mi Perfil</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
    <string name="ver_carritos">Ver carrito</string>
    <string name="productos">Productos</string>
    <string name="title_activity_ubicacion_cliente">ActivityUbicacionCliente</string>
</resources>