<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityRegistrar">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="65dp"

        android:background="#823E24"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imgVolver"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="341dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Registrarse "
            android:textColor="#FFFFFF"
            android:textSize="25sp" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <ImageView
                    android:id="@+id/imgRUsers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Nombre "
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRNombre"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#000000"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/apellidod"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:inputType="textPersonName"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Telefono"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:ems="10"
                android:inputType="phone"
                android:maxLength="8"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/correo_electronicov"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Contraseña"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRUsuario"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:inputType="textImeMultiLine"
                android:singleLine="true"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />


            <Button
                android:id="@+id/btnRRegistrar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/radiusbutton"
                android:text="@string/crear_usuario"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </ScrollView>








</LinearLayout>